Adding nodes now works with links. Can't add links yet though

--- a/service/src/main/resources/ui/graph_example.html
+++ b/service/src/main/resources/ui/graph_example.html
@@ -4,7 +4,12 @@
 <script type="text/javascript" src="js/jquery-1.8.0.js"></script>
 <script type="text/javascript" src="js/d3.v3.js"></script>
 <style type="text/css">
-/* No style rules here yet */
+
+    link: {
+        stroke: black;
+        fill: black;
+        width: 2px;
+    }
 </style>
 </head>
 <body>
