get edges to show up

--- a/service/src/main/resources/ui/graph_example.html
+++ b/service/src/main/resources/ui/graph_example.html
@@ -3,14 +3,7 @@
 <title>Product Network Graph Example</title>
 <script type="text/javascript" src="js/jquery-1.8.0.js"></script>
 <script type="text/javascript" src="js/d3.v3.js"></script>
-<style type="text/css">
-
-    link: {
-        stroke: black;
-        fill: black;
-        width: 2px;
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="css/graph_example.css"/>
 </head>
 <body>
 	<script type="text/javascript" src="js/graph_example.js">
