--- a/service/src/main/resources/ui/workspace.html
+++ b/service/src/main/resources/ui/workspace.html
@@ -4,9 +4,26 @@
 </head>
 <body>
 	<script type="text/javascript" src="/ui/js/jquery-1.8.0.js"></script>
-	<script type="text/javascript" src="/ui/js/underscore-1.3.3.js"></script>
+	<script type="text/javascript" src="/ui/js/underscore-1.5.2.js"></script>
 	<script type="text/javascript" src="/ui/js/json2.js"></script>
-	<script type="text/javascript" src="/ui/js/backbone-0.9.2.js"></script>
+	<script type="text/javascript" src="/ui/js/backbone.js"></script>
+
+	<div id="inputs">
+		<form id="new_product_form">
+			<label for="parent_product">Parent Product</label> <input
+				id="parent_product" type="text" /> <label for="relationship">Relationship</label>
+			<input id="relationship" type="text" /> <label
+				for="new_product_name">New Product Name</label> <input
+				id="new_product_name" type="text" /> <input id="submit"
+				type="button" name="Submit" />
+		</form>
+	</div>
+
+	<div id="existing">
+		<p>Existing product networks go here</p>
+		<div id="product-list"></div>
+	</div>
+	<input id="find" type="button" value="FIND" />
 	<script type="text/javascript" src="/ui/js/workspace.js"></script>
 </body>
 </html>
