--- a/service/src/main/resources/ui/workspace.html
+++ b/service/src/main/resources/ui/workspace.html
@@ -2,12 +2,8 @@
 <head>
 <title>Workspace</title>
 </head>
-<body>
-	<script type="text/javascript" src="/ui/js/jquery-1.8.0.js"></script>
-	<script type="text/javascript" src="/ui/js/underscore-1.5.2.js"></script>
-	<script type="text/javascript" src="/ui/js/json2.js"></script>
-	<script type="text/javascript" src="/ui/js/backbone.js"></script>
-
+<body ng-app="WorkspaceModule">
+	
 	<div id="inputs">
 		<form id="new_product_form">
 			<label for="parent_product">Parent Product</label> <input
@@ -24,6 +20,9 @@
 		<div id="product-list"></div>
 	</div>
 	<input id="find" type="button" value="FIND" />
+	<script
+        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script type="text/javascript">
 	<script type="text/javascript" src="/ui/js/workspace.js"></script>
 </body>
 </html>
