--- a/service/src/main/resources/ui/app/ruleform_list.html
+++ b/service/src/main/resources/ui/app/ruleform_list.html
@@ -1,5 +1,6 @@
 <html>
 <body ng-app='apiApp'>
+<h1>The Workbench</h1>
     <div class="container" ng-view=""></div>
 	<script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
