--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -1,12 +1,12 @@
-<html ng-app="ultra-browser">
+<html ng-app="usBrowser">
 <head>
 <title>US Browser</title>
 <link rel="stylesheet"
 	href="bower_components/bootstrap/dist/css/bootstrap.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-jsonld/dist/angular-jsonld.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/ultra-browser.js"></script>
 </head>
 <body>
   <div ng-view></div>
