--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -5,6 +5,7 @@
 	href="bower_components/bootstrap/dist/css/bootstrap.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/json-formatter/dist/json-formatter.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/ultra-browser.js"></script>
 </head>
