add css.  normalize ruleform relative iri's

--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -3,13 +3,14 @@
 <title>US Browser</title>
 <link rel="stylesheet"
 	href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/json-formatter/dist/json-formatter.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/ultra-browser.js"></script>
+<link rel="stylesheet" href="css/usBrowser.css">
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/json-formatter/dist/json-formatter.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/ultra-browser.js"></script>
 </head>
 <body>
-  <div ng-view></div>
+	<div ng-view></div>
 </body>
 </html>
