fix style sheets, use light/light for json tree

--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -2,8 +2,10 @@
 <head>
 <title>US Browser</title>
 <link rel="stylesheet"
-	href="bower_components/bootstrap/dist/css/bootstrap.css">
-<link rel="stylesheet" href="css/usBrowser.css">
+	href="bower_components/bootstrap/dist/css/bootstrap.css" />
+<link rel="stylesheet"
+	href="bower_components/json-formatter/dist/json-formatter.css" />
+<link rel="stylesheet" href="css/usBrowser.css" />
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/json-formatter/dist/json-formatter.js"></script>
