--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -8,9 +8,11 @@
 <link rel="stylesheet" href="css/usBrowser.css" />
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/lodash/dist/lodash.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/json-formatter/dist/json-formatter.js"></script>
-<script src="js/controllers.js"></script>
 <script src="js/ultra-browser.js"></script>
+<script src="js/controllers.js"></script>
 </head>
 <body>
 	<div ng-view></div>
