--- a/phantasm-at-rest/src/test/resources/assets/index.html
+++ b/phantasm-at-rest/src/test/resources/assets/index.html
@@ -11,6 +11,7 @@
 <script src="bower_components/lodash/dist/lodash.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/json-formatter/dist/json-formatter.js"></script>
+<script src="/angular/phantasm-at-rest.js"></script>
 <script src="js/ultra-browser.js"></script>
 <script src="js/controllers.js"></script>
 </head>
