--- a/browser/src/main/resources/browser/index.html
+++ b/browser/src/main/resources/browser/index.html
@@ -6,12 +6,12 @@
 <link rel="stylesheet" href="css/usBrowser.css" />
 <link rel="stylesheet" href="css/usBrowser.css" />
 <link rel="stylesheet" href="css/json-formatter.css" />
-<script src="bower_components/angular/angular.min.js"></script>
-<script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="js/json-formatter.js"></script>
-<script src="js/phantasm-at-rest.js"></script>
+<script src="/angular/phantasm-at-rest.js"></script>
 <script src="js/browser.js"></script>
 <script src="js/controllers.js"></script>
 </head>
