--- a/browser/src/main/resources/browser/index.html
+++ b/browser/src/main/resources/browser/index.html
@@ -6,12 +6,12 @@
 <link rel="stylesheet" href="css/usBrowser.css" />
 <link rel="stylesheet" href="css/usBrowser.css" />
 <link rel="stylesheet" href="css/json-formatter.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.1/restangular.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.1/restangular.min.js"></script>
 <script src="js/json-formatter.js"></script>
-<script src="/angular/phantasm-at-rest.js"></script>
+<script src="js/phantasm-at-rest.js"></script>
 <script src="js/browser.js"></script>
 <script src="js/controllers.js"></script>
 </head>
