--- a/phantasm-at-rest/src/main/resources/workspace-explorer/index.html
+++ b/phantasm-at-rest/src/main/resources/workspace-explorer/index.html
@@ -21,22 +21,39 @@ body {
 	height: 100vh;
 }
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.0/graphiql.css" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.0/graphiql.css" />
 <script src="//cdn.jsdelivr.net/fetch/0.9.0/fetch.min.js"></script>
 <script src="//cdn.jsdelivr.net/react/0.14.7/react.min.js"></script>
 <script src="//cdn.jsdelivr.net/react/0.14.7/react-dom.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.js"></script>
 </head>
 <body>
+	<div class="login">
+		<h1>Login to Web App</h1>
+		<form method="post" action="/api/oauth2/token/login">
+			<p>
+				<input type="text" name="username" value="" placeholder="Username">
+			</p>
+			<p>
+				<input type="password" name="password" value=""
+					placeholder="Password">
+			</p>
+			<p class="submit">
+				<input type="submit" name="commit" value="Login">
+			</p>
+		</form>
+	</div>
 	<div id="graphiql">Loading...</div>
 	<script>
-	    function getQueryStringValue(key) {
-	        return decodeURIComponent((window.location.search.replace(
-	                new RegExp("^(?:.*[&\\?]"
-	                        + encodeURIComponent(key).replace(/[\.\+\*]/g,
-	                                "\\$&") + "(?:\\=([^&]*))?)?.*$", "i"),
-	                "$1")));
-	    }
+		function getQueryStringValue(key) {
+			return decodeURIComponent((window.location.search.replace(
+					new RegExp("^(?:.*[&\\?]"
+							+ encodeURIComponent(key).replace(/[\.\+\*]/g,
+									"\\$&") + "(?:\\=([^&]*))?)?.*$", "i"),
+					"$1")));
+		}
 		/**
 		 * This GraphiQL example illustrates how to use some of GraphiQL's props
 		 * in order to enable reading and updating the URL parameters, making
@@ -95,23 +112,24 @@ body {
 							}).join('&');
 			history.replaceState(null, null, newSearch);
 		}
-        var workspaceUri = getQueryStringValue('workspace');
-        if (workspaceUri) {
-            workspace = encodeURIComponent(workspaceUri);
-        } else {
-            workspace = encodeURIComponent('urn:uuid:00000000-0000-0004-0000-000000000003');
-        }
+		var workspaceUri = getQueryStringValue('workspace');
+		if (workspaceUri) {
+			workspace = encodeURIComponent(workspaceUri);
+		} else {
+			workspace = encodeURIComponent('urn:uuid:00000000-0000-0004-0000-000000000003');
+		}
 		// Defines a GraphQL fetcher using the fetch API.
 		function graphQLFetcher(graphQLParams) {
-			return fetch(window.location.origin + '/api/workspace/' + workspace, {
-				method : 'post',
-				headers : {
-					'Accept' : 'application/json',
-					'Content-Type' : 'application/json',
-				},
-				body : JSON.stringify(graphQLParams),
-				credentials : 'include',
-			}).then(function(response) {
+			return fetch(
+					window.location.origin + '/api/workspace/' + workspace, {
+						method : 'post',
+						headers : {
+							'Accept' : 'application/json',
+							'Content-Type' : 'application/json',
+						},
+						body : JSON.stringify(graphQLParams),
+						credentials : 'include',
+					}).then(function(response) {
 				return response.text();
 			}).then(function(responseBody) {
 				try {
