Display acquired token on login page.

--- a/phantasm-at-rest/src/main/resources/workspace-explorer/index.html
+++ b/phantasm-at-rest/src/main/resources/workspace-explorer/index.html
@@ -45,6 +45,7 @@ body {
                     value="Login">
             </form>
         </div>
+        <div id="login_token"></div>
     </div>
 	<div id="graphiql">Loading...</div>
 	<script>
